--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <div class="timeline-item reveal">
                     <h3>G.C.E Advanced Level</h3>
                     <p class="timeline-date">2023</p>
-                    <p>Randomoncyoke College - Gampaho</p>
+                    <p>Bandaranayake College - Gampaha</p>
                 </div>
             </div>
         </div>
